@@ -1,4 +1,4 @@
-AM_CPPFLAGS = -I$(top_srcdir)/lib/antlr
+AM_CPPFLAGS = -I$(top_srcdir)/lib/antlr -DANTLR_EXPORTS
 
 noinst_LTLIBRARIES = libantlr.la
 libantlr_la_LDFLAGS = -avoid-version
